# Identikeep

./: .travis.yml  CMakeLists.txt  README.md  prepare.sh
CMake/: FindMKL.cmake  FindMKL.cmake.old  SetCPP11.cmake  SetStatic.cmake
Docs/: Compile.md  FAQ.md
PCollect/: CMakeLists.txt  Files.cpp  Files.h  MPIntercept.cpp  MPIntercept.h  PCollect.cpp  PCollect.h  PluginLoader.cpp  PluginLoader.h  identikeep.cpp  identikit.cpp
Plugins/: CMakeLists.txt
Plugins/Any/: CMakeLists.txt
Plugins/Any/CUDA/: CMakeLists.txt  CUDA.cu  CUDA.h  plugin.cpp
Plugins/Any/Extensions/: CMakeLists.txt  Extensions.cpp  Extensions.h  plugin.cpp
Plugins/Any/IOBench/: CMakeLists.txt  IOBench.cpp  IOBench.h  plugin.cpp
Plugins/Any/MKL/: CMakeLists.txt  MKL.cpp  MKL.h
Plugins/Any/MPI/: CMPI.cpp  CMPI.h  CMakeLists.txt  plugin.cpp
Plugins/Any/MPIBench/: CMakeLists.txt  MPIBench.cpp  MPIBench.h  plugin.cpp
Plugins/Any/OpenMP/: CMakeLists.txt  OMP.cpp  OMP.h  plugin.cpp
Plugins/Linux/: CMakeLists.txt
Plugins/Linux/CPU/: CMakeLists.txt  CPU.cpp  CPU.h  plugin.cpp
Plugins/Linux/Env/: CMakeLists.txt  Env.cpp  Env.h  plugin.cpp
Plugins/Linux/Exec/: CMakeLists.txt  Exec.cpp  Exec.h  plugin.cpp
Plugins/Linux/FS/: CMakeLists.txt  FS.cpp  FS.h  plugin.cpp
Plugins/Linux/Libs/: CMakeLists.txt  Libs.cpp  Libs.h  plugin.cpp
Plugins/Linux/Mem/: CMakeLists.txt  Mem.cpp  Mem.h  plugin.cpp
Plugins/Linux/OS/: CMakeLists.txt  OS.cpp  OS.h  plugin.cpp
Plugins/Template/PluginName/: CMakeLists.txt  PluginName.cpp  PluginName.h  plugin.cpp
Scripts/: CMakeLists.txt  identirun.py  identiview.py
include/: Info.h  Utils.h  multire.h
include/pugg/: Kernel.h  Plugin.h
scripts/: identiview.py
